# cli-agent

./: .coverage  .gitignore  =1.0.0  =1.30  =3.0  =7.0  AGENTS.MD  AGENTS.md  README.md  bandit_report.json  bandit_report_after_fixes.json  coverage.json  dummy_responses.json  file_violation_counts_sorted.txt  flake8_report.txt  out.txt  pyproject.toml  pyroma_report.txt  pyroma_report_after_fixes.txt  pyroma_report_after_reorder.txt  pyroma_report_after_setup_py.txt  radon_cc_report.json  radon_mi_report.json  radon_raw_report.txt  requirements.txt  temp_run_openrouter_test.py  wps_error_counts.txt
dev/app1/: README.md  openrouter_session.json  tictactoe.py
docs/: CODEX_PLAN.md  CODE_REVIEW.md  MVP-TASKS.md
src/: agent.py  assistant_message.py  autocompletion.py  cli.py  cli_confirmation.ts  confirmations.py  file_cache.py  llm.py  llm_protocol.py  memory.py  mentions.py  slash_commands.py  test_autocompletion.py  test_file_cache.py  test_mentions.py  test_slash_commands.py  utils.py
src/cline_wrapper/: auto_approval_settings.ts  cline_executor.ts
src/prompts/: commands.py  system.py
src/tools/: __init__.py  browser.py  code.py  command.py  file.py  mcp.py  meta_tools.py  tool_protocol.py
tests/: test_agent.py  test_agent_loop.py  test_agent_modes.py  test_assistant_message.py  test_assistant_message_extra.py  test_cli.py  test_code_navigation.py  test_command_tool.py  test_confirmations.py  test_file_tools.py  test_git_auto_commit.py  test_llm.py  test_memory.py  test_openrouter_integration.py  test_parse_assistant_message.py  test_slash_commands.py  test_slash_commands_undo.py  test_system_prompt.py  test_utils_git.py
tests/prompts/: __init__.py  test_system_prompt.py
tests/tools/: __init__.py  test_browser_tools.py  test_code_tools.py  test_command_tools.py  test_file_tools.py  test_mcp_tools.py  test_meta_tools.py
