[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-agent"
version = "0.1.0"
description = "CLI-based software development agent"
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.30",
    "Jinja2>=3.0",
    "prompt_toolkit~=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0", # Added pytest-mock
    "ruff>=0.4.0",
    "requests>=2.20", # Added requests for test mocking
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
exclude = ["vendor"]
